Agrego id a los inputs de login y register

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -10,8 +10,8 @@
   <div class="contenedor">
     <h2>Iniciar Sesión</h2>
     <form action="/api/login" method="post">
-      <input type="text" name="usuario" placeholder="Usuario" required>
-      <input type="password" name="clave" placeholder="Contraseña" required>
+      <input type="text" id="usuario" name="usuario" placeholder="Usuario" required>
+      <input type="password" id="clave" name="clave" placeholder="Contraseña" required>
       <button type="submit">Entrar</button>
     </form>
     <p>¿No tenés cuenta? <a href="register.html">Registrate</a></p>
