--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -10,8 +10,8 @@
   <div class="contenedor">
     <h2>Crear Cuenta</h2>
     <form action="/api/registro" method="post">
-      <input type="text" name="usuario" placeholder="Usuario" required>
-      <input type="password" name="clave" placeholder="Contraseña" required>
+      <input type="text" id="usuario" name="usuario" placeholder="Usuario" required>
+      <input type="password" id="clave" name="clave" placeholder="Contraseña" required>
       <button type="submit">Registrarme</button>
     </form>
     <p>¿Ya tenés cuenta? <a href="login.html">Iniciar sesión</a></p>
