fetchs funcionando (falta el put/editar)

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -25,6 +25,9 @@
         <div class="container">
             
         </div>
+        <div class="container terminadas">
+
+        </div>
         <div class="aside">
             <div class="newnote">
                 <a href="#">
@@ -37,7 +40,7 @@
     		    <h2>Escribir una nota</h2>
     		    <input type="text" id="modalNoteTitle" placeholder="Título"><br><br>
     		    <textarea id="modalNoteContent" placeholder="Contenido de la nota"></textarea><br><br>
-    		    <button onclick="saveModalNote()">Guardar</button>
+    		    <button id="saveNoteBtn">Guardar</button>
             </div>
         </div>
     </main>
