--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -2,19 +2,16 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
-  <link rel="stylesheet" href="css/stylestomi.css">
+  <title>Iniciar sesión</title>
+  <link rel="stylesheet" href="./styles.css">
+  <script src="./login.js"></script>
 </head>
 <body>
-  <div class="contenedor">
-    <h2>Iniciar Sesión</h2>
-    <form action="/api/login" method="post">
-      <input type="text" id="usuario" name="usuario" placeholder="Usuario" required>
-      <input type="password" id="clave" name="clave" placeholder="Contraseña" required>
-      <button type="submit">Entrar</button>
-    </form>
-    <p>¿No tenés cuenta? <a href="register.html">Registrate</a></p>
-  </div>
+<main class="auth-container">
+  <h2>Iniciar sesión</h2>
+  <input type="text" id="username" placeholder="Nombre de usuario">
+  <input type="password" id="password" placeholder="Contraseña">
+  <button id="loginBtn">Ingresar</button>
+</main>
 </body>
 </html>
