Sumamos servicio a la entidad Etiqueta y la relacionamos con Note

--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -7,12 +7,14 @@
   <script src="./register.js"></script>
 </head>
 <body>
-<main class="auth-container">
-  <h2>Crear cuenta</h2>
-  <input type="text" id="username" placeholder="Nombre de usuario">
-  <input type="text" id="nombreCompleto" placeholder="Nombre completo">
-  <input type="password" id="password" placeholder="Contraseña">
-  <button id="registerBtn">Registrarse</button>
+<main class="auth-wrapper">
+  <div class="auth-container">
+    <h2>Crear cuenta</h2>
+    <input type="text" id="username" placeholder="Nombre de usuario">
+    <input type="text" id="nombreCompleto" placeholder="Nombre completo">
+    <input type="password" id="password" placeholder="Contraseña">
+    <button id="registerBtn">Registrarse</button>
+  </div>
 </main>
 </body>
 </html>
