--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -7,11 +7,13 @@
   <script src="./login.js"></script>
 </head>
 <body>
-<main class="auth-container">
-  <h2>Iniciar sesión</h2>
-  <input type="text" id="username" placeholder="Nombre de usuario">
-  <input type="password" id="password" placeholder="Contraseña">
-  <button id="loginBtn">Ingresar</button>
+<main class="auth-wrapper">
+  <div class="auth-container">
+    <h2>Iniciar sesión</h2>
+    <input type="text" id="username" placeholder="Nombre de usuario">
+    <input type="password" id="password" placeholder="Contraseña">
+    <button id="loginBtn">Ingresar</button>
+  </div>
 </main>
 </body>
 </html>
