--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -19,12 +19,11 @@
         </nav>
     </header>
     <main>
-        <!-- Columna central -->
-        <div class="container">
+        <div class="container activas-container">
             <h2>Notas Activas</h2>
         </div>
 
-        <div class="container terminadas">
+        <div class="container terminadas-container">
             <h2>Notas Terminadas</h2>
         </div>
     </main>
