--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Registro de Usuario</title>
-  <link rel="stylesheet" href="./styles.css">
+  <link rel="stylesheet" href="./new.css">
   <script src="./register.js"></script>
 </head>
 <body>
