Agregamos redireccionamiento entre el login y el register

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -13,6 +13,9 @@
     <input type="text" id="username" placeholder="Nombre de usuario">
     <input type="password" id="password" placeholder="Contraseña">
     <button id="loginBtn">Ingresar</button>
+    <p class="auth-switch">
+      ¿No tenés cuenta? <a href="register.html">Registrate acá</a>
+    </p>
   </div>
 </main>
 </body>
