--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -14,6 +14,9 @@
     <input type="text" id="nombreCompleto" placeholder="Nombre completo">
     <input type="password" id="password" placeholder="Contraseña">
     <button id="registerBtn">Registrarse</button>
+    <p class="auth-switch">
+      ¿Ya tenés cuenta? <a href="login.html">Iniciá sesión</a>
+    </p>
   </div>
 </main>
 </body>
